# DACSERT

./: .gitignore  README.md  pyproject.toml
core/: extractors.py  llm_orchestrator.py  opinions_questioner.py
prompts/: first_job_prompt  optional_prompt  second_job_prompt  system_prompt
responses/: changing_opinions.csv
